@@ -1,6 +1,12 @@
 package org.graphs;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
 
 public class IGraph implements Graph{
     private ArrayList<ArrayList<Integer>> matrix;
@@ -61,7 +67,7 @@ public class IGraph implements Graph{
         if (matrix.isEmpty()) {
             size = 0;
         } else {
-            size = matrix.getFirst().size();
+            size = matrix.get(0).size();
         }
 
         for (int i = 0; i < size; i++) {
@@ -100,12 +106,92 @@ public class IGraph implements Graph{
     }
 
     @Override
-    public void toposort() {
+    public ArrayList<Integer> toposort() {
+        HashMap<Integer, Integer> colors = new HashMap<>();
+        ArrayList<Integer> sort = new ArrayList<>();
+        for (int i = 0; i < matrix.size(); i++) {
+            colors.put(i, 0);
+        }
+        for (int i = 0; i < matrix.size(); i++) {
+            boolean res = dfsToposort(colors, sort, i);
+            if (!res) {
+                return null;
+            }
+        }
+        Collections.reverse(sort);
+        return sort;
+    }
 
+    private boolean dfsToposort(HashMap<Integer, Integer> colors, ArrayList<Integer> sort, Integer vertex) {
+        if (colors.get(vertex) != 0) {
+            return true;
+        }
+        colors.put(vertex, 1);
+        for (int i = 0; i < matrix.size(); i++) {
+            if (matrix.get(vertex).get(i) == 1) {
+                for (int j = 0; j < matrix.size(); j++) {
+                    if (matrix.get(j).get(i) == -1) {
+                        if (colors.get(j) == 1) {
+                            return false;
+                        } else if (colors.get(j) == 0) {
+                            boolean res = dfsToposort(colors, sort, j);
+                            if (!res) {
+                                return false;
+                            }
+                        }
+                        break;
+                    }
+                }
+            }
+        }
+        colors.put(vertex, 2);
+        sort.add(vertex);
+
+        return true;
     }
 
     @Override
-    public void readFromFile(String path) {
+    public void readFromFile(String path) throws IOException {
+        List<String> file = Files.readAllLines(Path.of(path));
+        int countVertices = 0, countEdges = 0;
+        if (file.size() > 3) {
+            if (!file.get(0).equals("Incident matrix")){
+                throw new IOException();
+            }
 
+            try {
+                countVertices = Integer.parseInt(file.get(1));
+            } catch (NumberFormatException e) {
+                throw new IOException();
+            }
+
+            try {
+                countEdges = Integer.parseInt(file.get(2));
+            } catch (NumberFormatException e) {
+                throw new IOException();
+            }
+
+            ArrayList<ArrayList<Integer>> newMatrix = new ArrayList<>();
+            for (int i = 0; i < countVertices; i++) {
+                newMatrix.add(new ArrayList<Integer>());
+            }
+
+            for (int i = 0; i < countEdges; i++) {
+                String[] str = file.get(i+3).split(" ");
+                if (str.length != countVertices) {
+                    throw new IOException();
+                }
+                for (int j = 0; j < countVertices; j++) {
+                    try {
+                        newMatrix.get(j).add(Integer.parseInt(str[j]));
+                    } catch (NumberFormatException e) {
+                        throw new IOException();
+                    }
+                }
+            }
+            matrix = newMatrix;
+        } else {
+            throw new IOException();
+        }
     }
 }
